fixes #7 upgrade all dependencies to the latest

--- a/example/index.html
+++ b/example/index.html
@@ -22,10 +22,18 @@
       .ace_editor { font-size: 20px !important;}
       .form {  height: 400px;  }
       .schema {  height: 800px;  }
+
+      .Select {
+        z-index: 5;
+      }
+
     </style>
   </head>
   <body>
     <div id="app"></div>
+    <script>
+        if(parent && !window.__REACT_DEVTOOLS_GLOBAL_HOOK__) window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
+    </script>
     <script src="form.entry.js"></script>
   </body>
 </html>
